[gd_scene load_steps=7 format=2]

[ext_resource path="res://planets/PlanetBody.gd" type="Script" id=1]
[ext_resource path="res://planets/JumpPlanet.gd" type="Script" id=2]
[ext_resource path="res://planets/planets_sheet.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=35]
radius = 2.0

[sub_resource type="CircleShape2D" id=13]
radius = 4.0

[sub_resource type="CircleShape2D" id=34]
radius = 14.0357

[node name="JumpPlanet" type="RigidBody2D"]
collision_layer = 4
mass = 200.0
angular_damp = 100.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 12
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 35 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 0.52549, 0.537255, 0.541176, 0.0784314 )
amount = 240
lifetime = 12.0
local_coords = false
direction = Vector2( 2, 0 )
spread = 45.1
gravity = Vector2( 0, 0 )

[node name="LandingArea" type="Area2D" parent="."]
position = Vector2( -12, -34 )
collision_layer = 4
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LandingArea"]
visible = false
position = Vector2( 12, 34 )
shape = SubResource( 13 )

[node name="GravityArea" type="Area2D" parent="."]
collision_layer = 2
space_override = 1
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 2.5
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityArea"]
shape = SubResource( 34 )

[connection signal="body_entered" from="LandingArea" to="LandingArea" method="_on_Jupiter_body_entered"]
[connection signal="body_exited" from="LandingArea" to="LandingArea" method="_on_Jupiter_body_exited"]
